# imgmesser

./: .env.deploy.example  .env.dev.example  .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.app.dev  README.md  compose.run.yaml  compose.yaml  custom_nginx.conf  deploy.sh
.sqlx/: query-1d41fa2b8935aaa0d4fa1697c477d201dbdd73d50300e8121681cc0e16b330c4.json  query-1fc7c02459d4a8fe1940b095fe2cea1e618714271cff453b0a0cbb31a948889d.json  query-2c1f7820d3836db2e091355b6f9efe6c3754a4f9db191b00674ec3a832dd064c.json  query-4a79f304a9fa786e8f6a1eb15690a796237d4fdd4647be124492d878961a0132.json  query-4e5088704fea685d3eef44dd64a667f5472ca5c8eb5b0a2e7569064d79c49ed3.json  query-4eef7e4c3849c7dddf53b87f9cef7235d00e6151c242497e5184a713946b0f47.json  query-56a395485230e854ab2966afbb8ea06b4e9a818099ecdab6431fd95944b9c23a.json  query-58a33d028c984d00a59fada8af35dde4c87458401f3308b330c3ed588c069d73.json  query-6b22a3965121a1b92ae6ca78fccc7e460253505ae2393eafba54b31e04176729.json  query-b2849bfccee89e629bd5adc31fc916135b05df6b5b3662d61423b9176f64d769.json  query-bf592e3c55b5f70489b1611d646ab082db3ef47957198a38d3e71e78df180bc4.json  query-f0ee580f05af1b1a47c0e1258592f893ab57335de328d3787dabb1fcbb7d19ba.json
api/: .env.example  Cargo.toml
api/auth/: Cargo.toml
api/auth/src/: jwt.rs  keys.rs  middleware.rs
api/config/: Cargo.toml
api/config/src/: lib.rs
api/db/: Cargo.toml  create.sql  schema.down.sql  schema.up.sql
api/db/db/: create.sql
api/db/migrations/: 20251112162123_create_schema.up.sql  20251126210944_add-version-cols.down.sql  20251126210944_add-version-cols.up.sql  20251128162139_rename-col-and-add-constraint.down.sql  20251128162139_rename-col-and-add-constraint.up.sql  20251128175225_add-size-col.down.sql  20251128175225_add-size-col.up.sql
api/db/src/: config.rs  conn.rs  images.rs  lib.rs
api/errors/: Cargo.toml
api/errors/src/: image.rs  lib.rs
api/handlers/: Cargo.toml
api/handlers/src/: auth.rs  images.rs  lib.rs
api/imgmesser/: Cargo.toml
api/imgmesser/src/: main.rs
api/models/: Cargo.toml
api/models/src/: user.rs
api/repos/: Cargo.toml
api/repos/src/: image_repo.rs  refresh_token_repo.rs  user_repo.rs
api/s3/: Cargo.toml
api/s3/src/: error.rs  lib.rs  objects.rs
api/schemas/: Cargo.toml
api/schemas/src/: auth_schemas.rs  token_schemas.rs
api/src/: lib.rs  main.rs  state.rs
api/src/auth/: error.rs  jwt.rs  middleware.rs  mod.rs
api/src/db/: config.rs  conn.rs  images.rs  mod.rs
api/src/errors/: auth.rs  image.rs
api/src/handlers/: auth.rs  error.rs  images.rs  mod.rs
api/src/models/: image.rs  mod.rs  refresh_token.rs  user.rs
api/src/repos/: image_repo.rs  mod.rs  refresh_token_repo.rs  user_repo.rs
api/src/s3/: mod.rs  objects.rs
api/src/schemas/: auth_schemas.rs  image_schemas.rs  mod.rs  token_schemas.rs
api/state/: Cargo.toml
api/state/src/: lib.rs
client/: .env.example  Dockerfile  Dockerfile.dev  compose.yaml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts  worker.js
client/src/: App.svelte  main.ts  store.ts
client/src/components/: AlertModal.svelte  ConfirmModal.svelte  Footer.svelte  Header.svelte  ImageGallery.svelte  ImageViewer.svelte  UploadForm.svelte  UserLogin.svelte  UserRegister.svelte
client/src/styles/: app.css
client/src/utils/: api.ts  app.ts
deploy_files/: compose.yaml  run.sh
deploy_files/etc/nginx/conf.d/: default.conf
imgmesser/: Cargo.toml
imgmesser/src/: lib.rs
server/: Cargo.toml
server/db/: schema.sql  schema.up.sql
server/src/: error.rs  lib.rs  main.rs  state.rs
server/src/auth/: claim.rs  error.rs  mod.rs  routes.rs
server/src/db/: conn.rs  mod.rs  schema.rs  user.rs
server/src/handlers/: auth.rs  mod.rs
server/src/s3/: error.rs  mod.rs
