[package]
name = "imgmesser-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
aws-types = "1.3.9"
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["serde", "v7"] }
