[package]
name = "imgmesser-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4.5.45", features = ["derive"] }
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
