[package]
name = "imgmesser-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
aws-types = "1.3.9"
axum = { version = "0.8", features = ["http2", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.45", features = ["derive"] }
headers = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v7"] }

imgmesser-core = { path = "../imgmesser" }
