[package]
name = "auth"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Local
errors.workspace = true
models.workspace = true
state.workspace = true

# Non-local
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono.workspace = true
headers = "0.4"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
rand = "0.9.2"
serde.workspace = true
uuid.workspace = true
