[package]
name = "imgmesser"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Local
auth.workspace = true
db.workspace = true
errors.workspace = true
handlers.workspace = true
models.workspace = true
repos.workspace = true
s3.workspace = true
schemas.workspace = true
state.workspace = true

# Non-local
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
