[package]
name = "repos"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Local
db.workspace = true
errors.workspace = true
models.workspace = true
s3.workspace = true

# Non-local
anyhow.workspace = true
async-trait = "0.1.89"
aws-sdk-s3.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
