[package]
name = "s3"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Local
config.workspace = true

# Non-local
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
tracing.workspace = true
